# rs-stm32f1-hello-ethernet

./: Cargo.toml  debug.gdb
.cargo/: config
src/: main.rs  net.rs
